--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -2,16 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2936ed3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pipeline /modular structutre "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e0fc95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1) Data ingestion\n",
+    "\n",
+    "# 2) prapare base model (CNN)-transfer learning - VGG19\n",
+    "\n",
+    "# 3) model training\n",
+    "\n",
+    "# 4) model evaluation\n",
+    "\n",
+    "# 5) deployement/mlflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f666e4d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# steps \n",
+    "# 1) update config.yaml\n",
+    "# 2) secretes.yaml optional\n",
+    "# 3) update entity\n",
+    "# 4) update configurataion manager\n",
+    "# 5) update components\n",
+    "# 6) pipelie\n",
+    "# 7) main.py\n",
+    "\n",
+    "\n",
+    "# after 4 pipeline >> update dvc.yaml and aap.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa16cff8",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py310",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
