--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -41,7 +41,7 @@
     "# 3) update entity\n",
     "# 4) update configurataion manager\n",
     "# 5) update components\n",
-    "# 6) pipelie\n",
+    "# 6) pipeline\n",
     "# 7) main.py\n",
     "\n",
     "\n",
